tests/ui/basic/add/nested.stderr
error: added value here
  --> tests/ui/basic/add/nested.rs:11:17
   |
LL |     let w = add(add(x, y), z);
   |                 ^^^^-^^-^
   |                     |  |
   |                     |  second value here
   |                     first value here
   |
   = note: `#[deny(rpl::foo)]` on by default

error: added value here
  --> tests/ui/basic/add/nested.rs:11:13
   |
LL |     let w = add(add(x, y), z);
   |             ^^^^---------^^-^
   |                 |          |
   |                 |          second value here
   |                 first value here

error: aborting due to 2 previous errors

